# Temalaboratorium-OpenMesh

./: CMakeLists.txt  README.md  main.cpp
OpenMesh-9.0.0/Doc/: changelog.docu  compiling.docu  decimater.docu  doxy.config.in  mainpage.docu  mesh.docu  navigation.docu  tutorial_02.docu  tutorial_03.docu  tutorial_05.docu  tutorial_06.docu  tutorial_08.docu  tutorial_09.docu  tutorial_10.docu  tutorial_11.docu  tutorial_12.docu
OpenMesh-9.0.0/Documentation/: a00044_source.html  a00146_source.html  a00161_source.html  a00164_source.html  a00167_source.html  a00170_source.html  a00185_source.html  a00197_source.html  a00209_source.html  a00215_source.html  a00254_source.html  a00257_source.html  a00269_source.html  a00275_source.html  a00320_source.html  a00329_source.html  a00335_source.html  a00353_source.html  (+102 more)
OpenMesh-9.0.0/src/OpenMesh/Apps/Sajat/: CMakeLists.txt  auxiliary.cpp  auxiliary.h  columnAuxiliary.cpp  columnAuxiliary.h  columnMain.cpp  columnMain.h  direct.hh  main.cpp  nelder-mead.hh  rotationAuxiliary.cpp  rotationAuxiliary.h  rotationMain.cpp  rotationMain.h  supportPoints.cpp  supportPoints.h  treeAuxiliary.cpp  treeAuxiliary.h  treeMain.cpp  treeMain.h
OpenMesh-9.0.0/src/OpenMesh/Apps/Sajat/models/: modelLeiras
OpenMesh-9.0.0/src/OpenMesh/Apps/SupportGeneration/: CMakeLists.txt  auxiliary.cpp  auxiliary.h  columnAuxiliary.cpp  columnAuxiliary.h  columnMain.cpp  direct.cc  main.cpp  nelder-mead.cc  rotationAuxiliary.cpp  rotationMain.cpp  rotationMain.h  supportPoints.cpp  supportPoints.h  treeAuxiliary.cpp  treeAuxiliary.h  treeMain.cpp
(+5 files in other folders)
